tests/ui/dyn-keyword/trait-dyn-in-qualified-path-for-object-safe-function-with-one-impl.rs
trait Trait {
    fn function() {}
}

impl Trait for () {}

fn main() {
    <dyn Trait>::function(); //~ ERROR the trait `Trait` cannot be made into an object
}
